added h1+ title to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>To do list</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            <h1>To do list</h1>
+            
+        </div>
+    </main>
 </body>
 </html>
