--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <main>
         <div>
             <h1>To do list</h1>
-            
+            <input type="text">
+            <input type="checkbox" name="" id="checkbox">
+            <button>Save</button>
         </div>
     </main>
 </body>
