--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <main>
         <div>
-            <h1>To do list</h1>
-            <input type="text">
-            <input type="checkbox" name="" id="checkbox">
+            <h1 id="title">To do list</h1>
+            <input type="text" id="mainInput">
+            <input type="checkbox" name="visInvis" id="visInvis">
             <button>Save</button>
         </div>
     </main>
