--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="title">To do list</h1>
             <input type="text" id="mainInput">
             <input type="checkbox" name="visInvis" id="visInvis">
-            <button>Save</button>
+            <button id="mainButton">Save</button>
         </div>
     </main>
 </body>
