--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <main>
         <div>
             <h1 id="title">To do list</h1>
+            <div></div>
             <input type="text" id="mainInput">
-            <input type="checkbox" name="visInvis" id="visInvis">
             <button id="mainButton">Save</button>
+
+            <input type="checkBox" name="visInvis" id="visInvis">
+            <label for="checkerBox">Hide completed</label>
         </div>
     </main>
 </body>
