added style to it and added divs to html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>To do list</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
+      <div id="mainBox">
+        <h1 id="title">To do list</h1>
         <div>
-            <h1 id="title">To do list</h1>
-            <div></div>
-            <input type="text" id="mainInput">
-            <button id="mainButton">Save</button>
-
-            <input type="checkBox" name="visInvis" id="visInvis">
-            <label for="checkerBox">Hide completed</label>
+          <input type="text" id="mainInput" />
+          <button id="mainButton">Save</button>
         </div>
+        <div>
+          <input type="checkBox" name="visInvis" id="visInvis" />
+          <label for="checkerBox">Hide completed</label>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
